compiler/testData/diagnostics/tests/j+k/kt2152.kt
//FILE: Bbb.kt
open class Bbb

//FILE: Ccc.java
public class Ccc extends Bbb {
}

//FILE: Ddd.kt
import <!USELESS_SIMPLE_IMPORT!>Ccc<!>

